fixed the scroll if cart sidebar overflows

--- a/components/Cart/CartSidebar/CartSidebar.module.css
+++ b/components/Cart/CartSidebar/CartSidebar.module.css
@@ -1,5 +1,5 @@
 .cartSideBar {
-  @apply w-80 flex flex-col bg-secondary text-secondary fixed top-0 z-10 transition-all ease-in-out duration-500; 
+  @apply w-80 min-h-full overflow-y-scroll flex flex-col bg-secondary text-secondary fixed top-0 bottom-0 z-10 transition-all ease-in-out duration-500 ; 
 }
 
 .cartSideBar--close {
